--- a/mon/css/atlas.css
+++ b/mon/css/atlas.css
@@ -150,3 +150,53 @@
         box-shadow: 0 0 0 40px rgba(0, 0, 0, 0);
     }
 }
+
+/* Menu */
+#overlay-menu {
+    position: fixed;
+    top:0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index:50;
+    background-color: rgba(0, 0, 0, 0.64);
+    display: none;
+}
+.mobile_menu_block {
+    position: fixed;
+    top:0;
+    right: 0;
+    height: 100%;
+    width: 350px;
+    transform: translateX(250px);
+    transition: all .5s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+    background-color: white;
+    z-index: 60;
+}
+.open-body {
+    overflow: hidden;
+}
+.open_offcavnas {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+}
+.main-menu li:hover>a {
+    color: #989090 !important;
+}
+.has-children li {
+    transition: all .3s ease;
+}
+.main-menu .has-children li:hover {
+    transform: translateX(10px);
+}
+.button-open-mobile-menu {
+    text-align: right;
+    padding-right: 30px;
+}
+.button-open-mobile-menu a {
+    color: white;
+    font-size: 26px;
+}
