--- a/mon/css/atlas.css
+++ b/mon/css/atlas.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Courgette');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
 /* Animation */
 .animate-box {
     opacity: 0;
@@ -104,8 +107,9 @@
 }
 .loader-wrap {
     position: fixed;
-    top: 45%;
+    top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 200;
 }
 .preloader {
