--- a/mon/css/atlas.css
+++ b/mon/css/atlas.css
@@ -5,7 +5,17 @@
 .animate-box {
     opacity: 0;
 }
-/**/
+.slider_area {
+    position: relative;
+}
+/* DESCRIPTION KUHNI FIRST SECTION*/
+.text-fam {
+    font-style: italic;
+    font-size:inherit;
+    font-weight: bold;
+    ffont-family: 'Raleway', sans-serif;
+}
+/*Padding top and bottom for sections*/
 .ptb {
     padding-bottom: 70px;
     padding-top: 70px;
@@ -14,12 +24,24 @@
     padding-bottom: 30px;
     padding-top: 30px;
 }
+/*background for section*/
 .bg {
     background-color: #f1f1f1;
+    background: linear-gradient(#f5f5f5, #ffffff, #eaeaea);
 }
 
 /* END */
 
+/* offers*/
+.t-offers {
+    color: white;
+    background-color: rgba(62, 62, 62, 0.66);
+}
+.t-offers-order {
+
+    font-size: 26px !important;
+    color: #dc3545 !important;
+}
 .about_thumb {
     position: relative;
 }
